Multiple package-building tweaks.
1. Add LazyData:true to DESCRIPTION.
2. Adjust Makefile to generate read counts from STAR runs.
3. Convert more 'biocLite' references to 'BiocManager::install' references.
4. Comment out all the 'BiocManager::install' references (figure out a central way to do this later).
5. Wrap raw R directives inside crude function.  Refine this later; but for now stop trying to run every line of the package during 'check'.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,6 +24,7 @@ Imports: AnnotationDbi, Biobase, BiocGenerics,
     ggplot2, gplots, grid, lattice,
     org.Hs.eg.db, parallel, pathview, pheatmap, plotly, plyr,
     readxl, shiny, stats4, stringr, survival
+LazyData: true
 License: Apache-2.0
 Maintainer: Su Wu <SWU16@mgh.harvard.edu>
 Package: DNFAGeneAnalysis
