Multiple fixes to clean up project warnings and add tests.
1. Modify "spelling" of license in DESCRIPTION.
2. Remove several commented-out lines, comment out unused lines in ChIPseeker.R.
3. Refactor, and add unit tests for, DESeqDataPreparation.R.
4. Always "library(plyr)" before "library(dplyr)".
5. Use a function rather than global var to get black.bold.18.text.
6. Fix various warnings, e.g. by surrounding '=' by whitespace in function calls, and using 'dplyr::select' rather than merely 'select'.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports: AnnotationDbi, Biobase, BiocGenerics,
     org.Hs.eg.db, parallel, pathview, pheatmap, plotly, plyr,
     readxl, shiny, stats4, stringr, survival
 LazyData: true
-License: Apache-2.0
+License: Apache License 2.0 + file LICENSE
 Maintainer: Su Wu <SWU16@mgh.harvard.edu>
 Package: DNFAGeneAnalysis
 RoxygenNote: 6.1.1
