More scRNA -related cleanup.
1. Consolidate much redundant code and add comments, in scRNA-Seq.R.
2. Add R.utils to the list of required packages in DESCRIPTION.
3. Update workflow documentation in README.md to explain how to execute the scRNA-Seq workflow.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,7 @@ Encoding: UTF-8
 Imports: AnnotationDbi, Biobase, BiocGenerics,
     BiocStyle, ChIPseeker, DESeq2, FactoMineR,
     GenomeInfoDb, GenomicRanges, IRanges,
-    KEGGREST, Matrix, RColorBrewer, RODBC,
+    KEGGREST, Matrix, R.utils, RColorBrewer, RODBC,
     Rcpp, RcppArmadillo, ReactomePA, S4Vectors,
     SummarizedExperiment,
     TxDb.Hsapiens.UCSC.hg19.knownGene,
