--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,9 @@ Imports: AnnotationDbi, Biobase, BiocGenerics,
     cluster, clusterProfiler, corrplot,
     data.table, devtools, dplyr,
     factoextra, gage, gageData, genefilter, geneplotter,
-    ggplot2, gplots, grid, lattice,
+    ggfortify, ggplot2, gplots, grid, lattice,
     org.Hs.eg.db, parallel, pathview, pheatmap, plotly, plyr,
-    readxl, shiny, stats4, stringr, survival
+    readxl, shiny, stats, stats4, stringr, survival
 LazyData: true
 License: Apache License 2.0 + file LICENSE
 Maintainer: Su Wu <SWU16@mgh.harvard.edu>
